--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		rel="stylesheet" 
 		type="text/css">
 	<link 
-		href="/css/trends.css" 
+		href="./css/trends.css" 
 		rel="stylesheet" 
 		type="text/css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-	<script src="/js/trends.min.js"></script>
+	<script src="./js/trends.min.js"></script>
 </head>
 <body>
 
