Rewrote html file to include divs structure Optimized less and styling with mixins Changes to js to reflect new div structure Adding additional configuration to grunt file.js and package.json

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		href="./css/trends.css" 
 		rel="stylesheet" 
 		type="text/css">
+	<link 
+		href="./bower_components/font-awesome/css/font-awesome.min.css" 
+		rel="stylesheet" 
+		type="text/css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<script src="./js/trends.min.js"></script>
@@ -21,48 +25,35 @@
 		Google Trends
 	</div>
 
-<table class="content">
-	<tbody class="body">
-		<tr class="trend-row">
-			<td class="trend-box">
-				<div class="hover panel trend-container">
-					<div class="front">
-						<table class="trend-front">
-							<tr>
-								<td class="trend">
-									&nbsp;
-								</td>
-							</tr>
-						</table>
-					</div>
-					<div class="back">
-						<table class="trend-back">
-							<tr>
-								<td class="links">
-									<p>search:</p>
-									<p><a class="google" target="_blank" href="">
-										Google
-									</a></p>
-									<p><a class="yahoo" target="_blank" href="">
-										Yahoo
-									</a></p>
-									<p><a class="bing" target="_blank" href="">
-										Bing
-									</a></p>
-								</td>
-							</tr>
-						</table>
-					</div>
+	<div class="content">
+		<div class="trend">
+			<div class="front">
+				<div class="marked">
+					
 				</div>
-			</td>
-		</tr>
-	<tbody>
-</table>
-
+				<div class="name">
+					&nbsp;
+				</div>
+			</div>
+			<div class="back">
+				<div class="links">
+					<p>search:</p>
+					<p><a class="google" target="_blank" href="">
+						Google <i class="fa fa-external-link"></i>
+					</a></p>
+					<p><a class="yahoo" target="_blank" href="">
+						Yahoo <i class="fa fa-external-link"></i>
+					</a></p>
+					<p><a class="bing" target="_blank" href="">
+						Bing <i class="fa fa-external-link"></i>
+					</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="footer">
-		Alex Johnson - 
 		<a href="http://winginit.net">http://winginit.net</a> - 
-		<a href="http://github.com/alexmj212/trends">Project on Github</a>
+		<a href="http://github.com/alexmj212/trends">Project on Github <i class="fa fa-github-alt"></i></a>
 	</div>
 </body>
 </html>
