--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Google Trends</title>
+	<title>Trends</title>
 	<link 
 		href="http://fonts.googleapis.com/css?family=Roboto:100,300,300italic,400,400italic,700,700italic" 
 		rel="stylesheet" 
@@ -22,7 +22,7 @@
 <body>
 
 	<div class="header">
-		Google Trends
+		Trends
 	</div>
 
 	<div class="content">
